# simple_tg_bot_app

./: .gitignore  docker-compose.yml  pyproject.toml
docker/: admin.Dockerfile  python.Dockerfile  tg_bot.Dockerfile
src/: settings.py
src/admin/app/: __main__.py  app.py
src/core/: base_dao.py  db.py  logger_wrapper.py
src/migrations/: env.py
src/migrations/versions/: 1b106814b9ad_init.py  446bd52a8446_init.py  45fd4e5862a4_init.py  bcd577a468ad_init.py
src/notes/: dao.py  models.py  schemas.py
src/tg_bot/: __init__.py  __main__.py  bot.py
